Text fix on about page

--- a/app/Resources/views/static/about.html.twig
+++ b/app/Resources/views/static/about.html.twig
@@ -13,8 +13,8 @@
                 realized at the <a href="http://www.izwt.uni-wuppertal.de/en/homepage.html">Interdisciplinary Centre for Science and Technology Studies</a> at <a href="http://www.uni-wuppertal.de/en/home.html">Wuppertal University</a>
                 under the supervision of <a href="http://www.geschichte.uni-wuppertal.de/personen/wissenschafts-und-technikgeschichte/prof-dr-volker-remmert.html">Volker Remmert</a>.
                 It originated from a research project funded by the <a href="http://www.dfg.de/en/">DFG</a>;
-                the digital infrastructure was provided by the <a href="http://pdr.bbaw.de/english">Person Data Repository</a> project
-                of the <a href="http://www.bbaw.de/en/">Berlin-Brandenburg Academy of Sciences and Humanities</a>.
+                the digital infrastructure was provided by the <a href="http://pdr.bbaw.de/english">Person Data Repository</a>, a research project
+                at the <a href="http://www.bbaw.de/en/">Berlin-Brandenburg Academy of Sciences and Humanities</a>.
             </p>
             <p>
                 This page provides introductory information about Jesuit scholars
@@ -176,7 +176,7 @@
             <p>
                 The digital infrastructure for the Jesuit Science Network
                 was provided by the <a href="http://pdr.bbaw.de/english">Person Data Repository</a> project at the <a href="http://www.bbaw.de/en/">Berlin-Brandenburg Academy of Sciences and Humanities</a>.
-                An additional intermediary MySQL database allows for more
+                An additional intermediary SQL database allows for more
                 efficient data access. The corresponding source code of the
                 project can be found <a href="#">on GitHub</a> and is provided
                 under the <a href="#">MIT license</a>.
