Text fix in about

--- a/app/Resources/views/static/about.html.twig
+++ b/app/Resources/views/static/about.html.twig
@@ -62,9 +62,9 @@
                 an umbrella term for those various areas of learned activity
                 in the early modern period that can be considered precursors
                 to what is now often condensed to STEM, science, technology,
-                engineering, and mathematics. For the practical realization
-                of the Jesuit prosopography, the JSN on a list subjects given
-                in a <abbr class="js-popover" data-trigger="hover" data-placement="bottom" data-content="“Les chaires de mathématiques” in Les Jésuites à la Renaissance : système éducatif et production du savoir, ed. by Luce Giard, Presses universitaires de France, pp. 239–261">1997 paper by Steven J. Harris</abbr>:
+                engineering, and mathematics. For the practical realization of
+                the Jesuit prosopography, the JSN relies on a list of subjects
+                given in a <abbr class="js-popover" data-trigger="hover" data-placement="bottom" data-content="“Les chaires de mathématiques” in Les Jésuites à la Renaissance : système éducatif et production du savoir, ed. by Luce Giard, Presses universitaires de France, pp. 239–261">1997 paper by Steven J. Harris</abbr>:
 
             <dl class="dl-horizontal">
                 <dt>Pure mathematics</dt>
