--- a/app/Resources/views/default/subjects.html.twig
+++ b/app/Resources/views/default/subjects.html.twig
@@ -19,8 +19,7 @@
             <header>
                 <ul class="pull-right nav nav-pills nav-pills-small group-nav">
                     <li{% if scheme is not defined %} class="active"{% endif %}><a href="{{ path('subjects') }}">alphabetical</a></li>
-                    <li{% if scheme is defined and scheme == 'harris' %} class="active"{% endif %}><a href="{{ path('subjects_grouped', {scheme: 'harris'}) }}">contemporary grouping</a></li>
-                    <li{% if scheme is defined and scheme == 'modern' %} class="active"{% endif %}><a href="{{ path('subjects_grouped', {scheme: 'modern'}) }}">modern grouping</a></li>
+                    <li{% if scheme is defined %} class="active"{% endif %}><a href="{{ path('subjects_grouped') }}">grouped</a></li>
                 </ul>
                 <h2>
                     {% if groupCount is defined and groupCount %}
