--- a/app/Resources/views/map/map.html.twig
+++ b/app/Resources/views/map/map.html.twig
@@ -181,7 +181,8 @@
                 minZoom: 3,
                 maxZoom: 10,
                 mapTypeControl: false,
-                streetViewControl: false
+                streetViewControl: false,
+                fullscreenControl: false
             });
 
             map.addListener('center_changed', debounce(updateUrl, 250));
