Finishing touches for publication

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -12,7 +12,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{ path('homepage') }}">JSN <span class="beta">beta</span></a>
+                <a class="navbar-brand" href="{{ path('homepage') }}">JSN <span class="beta">open beta</span></a>
             </div>
 
             <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -89,9 +89,8 @@
                 <div class="col-sm-4 col-xs-6 text-right">
                     <h4>Primary investigator</h4>
                     <p>
-                        <a href="http://www.geschichte.uni-wuppertal.de/personen/wissenschafts-und-technikgeschichte/dagmar-mrozik.html">Dagmar Mrozik</a><br>
-                        Wuppertal University<br>
-                        mrozik@<span class="hidden">null</span>uni-wuppertal.de
+                        Dagmar Mrozik<br>
+                        dagmar.mrozik@<span class="hidden">null</span>jesuitscience.net
                     </p>
 
                     <h4>Academic supervisor</h4>
@@ -107,12 +106,9 @@
 
                     <p>
                         Dagmar Mrozik<br>
-                        IZWT - Wuppertal University<br>
-                        Gaußstraße 20<br>
-                        42119 Wuppertal<br>
-                        Germany<br><br>
-                        mrozik@<span class="hidden">null</span>uni-wuppertal.de<br>
-                        +49 176 72 88 04 14
+                        Krakaustraße 27a<br>
+                        52064 Aachen<br>
+                        dagmar.mrozik@<span class="hidden">null</span>jesuitscience.net<br>
                     </p>
 
                 </div>
@@ -128,9 +124,6 @@
                         &bull;
                         <a href="/jsn-viaf.beacon" download><samp>BEACON</samp></a>
                     </p>
-                </div>
-                <div class="col-sm-6 col-sm-pull-6">
-                    <p><a href="{{ path('imprint') }}">Imprint</a></p>
                 </div>
             </div>
         </div>
