--- a/app/Resources/views/static/about.html.twig
+++ b/app/Resources/views/static/about.html.twig
@@ -19,7 +19,8 @@
             <p>
                 This page provides introductory information about Jesuit scholars
                 in the early modern sciences and the project itself. For more
-                information, please see the corresponding PhD thesis [link!!].
+                information, please see the corresponding PhD thesis which will
+                be published soon and made available here.
             </p>
 
             <h3 id="jesuit-science">Jesuit activity in the early modern sciences</h3>
@@ -68,14 +69,14 @@
 
             <dl class="dl-horizontal">
                 <dt>Pure mathematics</dt>
-                <dd>algebra, functions, series; analytical geometry; arithmetic;
+                <dd>Algebra, functions, series; analytical geometry; arithmetic;
                     integral calculus
                     and analysis; geometry; logarithms; number theory,
                     probablitites, etc.
                 </dd>
 
                 <dt>Mixed mathematics</dt>
-                <dd>mechanics; optics (catoptrics, dioptrics); acoustics
+                <dd>Mechanics; optics (catoptrics, dioptrics); acoustics
                     (harmonies, theory of
                     music and sound); hydraulics, civil and military
                     architecture; mathematical geography
@@ -85,7 +86,7 @@
 
                 <dt>Astronomy</dt>
                 <dd>
-                    calendars, almanachs, ephemerides; clocks (dials, horology);
+                    Calendars, almanachs, ephemerides; clocks (dials, horology);
                     spherical astronomy; lunar and
                     solar astronomy (observation and theory); comets
                     (observation and theory); stellar astronomy (observation);
@@ -94,14 +95,14 @@
 
                 <dt>Natural philosophy</dt>
                 <dd>
-                    commentaries of Aristotle; natural philosophy; philosophy of
+                    Commentaries of Aristotle; natural philosophy; philosophy of
                     experience; supernatural
                     and occult questions
                 </dd>
 
                 <dt>Natural history</dt>
                 <dd>
-                    cosmography; physical, subterranean, and politcal geography;
+                    Cosmography; physical, subterranean, and politcal geography;
                     hydrography;
                     meteorology (observation, instruments); zoology and botany;
                     cabinets of curiosities, collections
@@ -109,13 +110,13 @@
 
                 <dt>Medicine</dt>
                 <dd>
-                    health and disease; anatomy, physiology, surgery;
+                    Health and disease; anatomy, physiology, surgery;
                     experimental medicine
                 </dd>
 
                 <dt>Agriculture and economics</dt>
                 <dd>
-                    woods and horticulture; beekeeping; money, measure and
+                    Woods and horticulture; beekeeping; money, measure and
                     weight
                 </dd>
             </dl>
