--- a/app/Resources/less/custom.less
+++ b/app/Resources/less/custom.less
@@ -1160,3 +1160,29 @@ body.plain {
 abbr {
   text-decoration: none;
 }
+
+#btt {
+  position:fixed;
+  right:10px;
+  bottom:10px;
+  cursor:pointer;
+  width:50px;
+  height: 50px;
+  -webkit-border-radius:50px;
+  -moz-border-radius:50px;
+  border-radius:50px;
+  background-color:#eee;
+  text-indent:-9999px;
+  display:none;
+}
+#btt span {
+  position:absolute;
+  top:50%;
+  left:50%;
+  margin-left:-8px;
+  margin-top:-12px;
+  height:0;
+  width:0;
+  border:8px solid transparent;
+  border-bottom-color:#a13;
+}
