Revert address change

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -106,8 +106,10 @@
 
                     <p>
                         Dagmar Mrozik<br>
-                        Krakaustraße 27a<br>
-                        52064 Aachen<br>
+                        IZWT - Wuppertal University<br>
+                        Gaußstraße 20<br>
+                        42119 Wuppertal<br>
+                        Germany<br><br>
                         dagmar.mrozik@<span class="hidden">null</span>jesuitscience.net<br>
                     </p>
 
