--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -15,7 +15,7 @@
         </div>
 
         <div class="narrower">
-            <p>An error occuring while processing your request. We are sorry for any inconvenience.</p>
+            <p>An error occured while processing your request. We are sorry for any inconvenience.</p>
             <p></p>
             <p>
                 {{ include('plain_links.html.twig') }}
